Regression: Area lights. Size manipulators lost (WIN+NVidia) #97124

Closed
opened 2022-04-07 00:33:47 +02:00 by Vyacheslav Kobozev · 45 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c
Worked: 3.0.1, dc2d180181, 2022-01-25 17:19

Caused by 0cb5eae9d0

Short description of error
As title say. I mean these manipulators in corners:
изображение.png
They lost for all types of area light.

2022-04-07_01-29-20.mp4

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` Worked: 3.0.1, dc2d18018171, 2022-01-25 17:19 Caused by 0cb5eae9d0 **Short description of error** As title say. I mean these manipulators in corners: ![изображение.png](https://archive.blender.org/developer/F12979490/изображение.png) They lost for all types of area light. [2022-04-07_01-29-20.mp4](https://archive.blender.org/developer/F12979486/2022-04-07_01-29-20.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach

#97598 was marked as duplicate of this issue

#97598 was marked as duplicate of this issue

#97181 was marked as duplicate of this issue

#97181 was marked as duplicate of this issue
Vyacheslav Kobozev changed title from Area lights. Size manipulators lost. to Regression: Area lights. Size manipulators lost. 2022-04-07 01:32:48 +02:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Hi @Vyach , thanks for the report.
I can not reproduce on both 3.2 and 3.1.2
Do you have Light Size option unchecked in Viewport gizmo popover?

Hi @Vyach , thanks for the report. I can not reproduce on both 3.2 and 3.1.2 Do you have `Light Size` option unchecked in Viewport gizmo popover?

In #97124#1337219, @PratikPB2123 wrote:
Do you have Light Size option unchecked in Viewport gizmo popover?

I started with factory settings, so there was defaults everywhere.

Where is «Light size» option?
This one? Always on
изображение.png

Also now I remember that one of previous versions had blinking manipulators.
They appear only when I aimed in very tight area, and area wasn`t on the corner, but a bit far from it.

> In #97124#1337219, @PratikPB2123 wrote: > Do you have `Light Size` option unchecked in Viewport gizmo popover? I started with factory settings, so there was defaults everywhere. Where is «Light size» option? This one? Always on ![изображение.png](https://archive.blender.org/developer/F12981271/изображение.png) Also now I remember that one of previous versions had blinking manipulators. They appear only when I aimed in very tight area, and area wasn`t on the corner, but a bit far from it.

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Confirmed... no manipulators here too...

Confirmed... no manipulators here too...
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

Ok, thanks for checking. Tested again on 3.2-3.1 and still can't reproduce
Will ask someone if they can reproduce and investigate further :)
Blender 2022-04-08 10-21-58.mp4

Ok, thanks for checking. Tested again on 3.2-3.1 and still can't reproduce Will ask someone if they can reproduce and investigate further :) [Blender 2022-04-08 10-21-58.mp4](https://archive.blender.org/developer/F12983280/Blender_2022-04-08_10-21-58.mp4)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Hm cannot repro here in both 3.1.2 and 3.2

**System Information**
Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-glibc2.34.9000 64 Bits
Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44
version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `rBcc66d1020c3b`
Hm cannot repro here in both 3.1.2 and 3.2 ``` **System Information** Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-glibc2.34.9000 64 Bits Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44 version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `rBcc66d1020c3b` ```

Added subscriber: @slowburn

Added subscriber: @slowburn

Added subscriber: @deadpin

Added subscriber: @deadpin

I'm seeing something quite weird on my end. On otherwise similar machines using the same build of blender running Windows-10-10.0.19044-SP0 64 Bits:

Works: Graphics card: AMD FirePro W2100 ATI Technologies Inc. 4.5.14831 Core Profile Context FireGL 21.Q2.1 27.20.21026.2006
Broken: Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.09

I'm seeing something quite weird on my end. On otherwise similar machines using the same build of blender running Windows-10-10.0.19044-SP0 64 Bits: Works: Graphics card: AMD FirePro W2100 ATI Technologies Inc. 4.5.14831 Core Profile Context FireGL 21.Q2.1 27.20.21026.2006 Broken: Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.09

Added subscriber: @rjg

Added subscriber: @rjg

I can reproduce the issue on Windows 10 with an NVIDIA GeForce 1080 Ti (driver 512.15) in Blender 3.1.2 and current master. Release 3.0.1 appears to work fine.

I can reproduce the issue on Windows 10 with an NVIDIA GeForce 1080 Ti (driver 512.15) in Blender 3.1.2 and current master. Release 3.0.1 appears to work fine.

Renewed GPU drivers for my win 8.1, it doesen`t help

Renewed GPU drivers for my win 8.1, it doesen`t help

Added subscriber: @TheBigIvason

Added subscriber: @TheBigIvason
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

In #97124#1339382, @rjg wrote:
I can reproduce the issue on Windows 10 with an NVIDIA GeForce 1080 Ti (driver 512.15) in Blender 3.1.2 and current master. Release 3.0.1 appears to work fine.

Guess we can call it Confirmed then.
If someone could bisect this, we could raise priority to High.

> In #97124#1339382, @rjg wrote: > I can reproduce the issue on Windows 10 with an NVIDIA GeForce 1080 Ti (driver 512.15) in Blender 3.1.2 and current master. Release 3.0.1 appears to work fine. Guess we can call it `Confirmed` then. If someone could bisect this, we could raise priority to High.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

The bug was introduced by commit 0cb5eae9d0 @campbellbarton.

The bug was introduced by commit 0cb5eae9d0 @campbellbarton.
Member

Added subscriber: @LalaGhost

Added subscriber: @LalaGhost
Campbell Barton self-assigned this 2022-04-28 05:27:38 +02:00
Campbell Barton removed their assignment 2022-04-28 10:06:02 +02:00

Unfortunately I don't have an NVidia card available at the moment and can't redo the bug.

Tested with software-gl and this worked too, it's strange that only this gizmo fails.

Is this only happening for NVidia on Windows? Or does Linux+NVidia also show the problem?

Unfortunately I don't have an NVidia card available at the moment and can't redo the bug. Tested with software-gl and this worked too, it's strange that only this gizmo fails. Is this only happening for NVidia on Windows? Or does Linux+NVidia also show the problem?
Member

In #97124#1348142, @ideasman42 wrote:
Is this only happening for NVidia on Windows? Or does Linux+NVidia also show the problem?

In #97124#1337782, @lichtwerk wrote:
Hm cannot repro here in both 3.1.2 and 3.2

**System Information**
Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-glibc2.34.9000 64 Bits
Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44
version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c`
> In #97124#1348142, @ideasman42 wrote: > Is this only happening for NVidia on Windows? Or does Linux+NVidia also show the problem? > In #97124#1337782, @lichtwerk wrote: > Hm cannot repro here in both 3.1.2 and 3.2 > > ``` > **System Information** > Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-glibc2.34.9000 64 Bits > Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44 > version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` > ```
Campbell Barton changed title from Regression: Area lights. Size manipulators lost. to Regression: Area lights. Size manipulators lost (WIN32+NVidia) 2022-04-28 10:10:55 +02:00

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

@Vyach Your info mentions NVIDIA driver 472.12. Can you please check with a newer driver please, just to be sure?

I cannot reproduce it on Mac with M1 Max.

@Vyach Your info mentions NVIDIA driver 472.12. Can you please check with a newer driver please, just to be sure? I cannot reproduce it on Mac with `M1 Max`.
Member

@rjg - I can reproduce the issue on Windows 10 with an NVIDIA GeForce 1080 Ti (driver 512.15)

@ThomasDinges , I don't think updating driver will make any difference

>@rjg - I can reproduce the issue on Windows 10 with an NVIDIA GeForce 1080 Ti **(driver 512.15)** @ThomasDinges , I don't think updating driver will make any difference
Vyacheslav Kobozev changed title from Regression: Area lights. Size manipulators lost (WIN32+NVidia) to Regression: Area lights. Size manipulators lost (WIN+NVidia) 2022-04-28 21:01:47 +02:00

I have win64, so i fixed title.

I have win64, so i fixed title.

In #97124#1348269, @ThomasDinges wrote:
@Vyach Your info mentions NVIDIA driver 472.12. Can you please check with a newer driver please, just to be sure?

I'm on 511.79 and the issue is still there.

> In #97124#1348269, @ThomasDinges wrote: > @Vyach Your info mentions NVIDIA driver 472.12. Can you please check with a newer driver please, just to be sure? I'm on 511.79 and the issue is still there.

In #97124#1348269, @ThomasDinges wrote:
@Vyach Your info mentions NVIDIA driver 472.12. Can you please check with a newer driver please, just to be sure?

473.04, last stable driver for my OS. Bug is still here.

> In #97124#1348269, @ThomasDinges wrote: > @Vyach Your info mentions NVIDIA driver 472.12. Can you please check with a newer driver please, just to be sure? 473.04, last stable driver for my OS. Bug is still here.
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

I can repro (on win10) with both

renderer:	'llvmpipe (LLVM 13.0.0, 256 bits)'
vendor:		'Mesa/X.org'
version:	'4.5 (Core Profile) Mesa 21.3.4 (git-bfe18835b5)'

and


renderer:	'NVIDIA GeForce GTX 1660/PCIe/SSE2'
vendor:		'NVIDIA Corporation'
version:	'4.5.0 NVIDIA 511.65'

so doesn't feel like a driver bug...

I can repro (on win10) with both ``` renderer: 'llvmpipe (LLVM 13.0.0, 256 bits)' vendor: 'Mesa/X.org' version: '4.5 (Core Profile) Mesa 21.3.4 (git-bfe18835b5)' ``` and ``` renderer: 'NVIDIA GeForce GTX 1660/PCIe/SSE2' vendor: 'NVIDIA Corporation' version: '4.5.0 NVIDIA 511.65' ``` so doesn't *feel* like a driver bug...

That's odd, I cant redo the error with LLVMPipe on Linux, perhaps this is specifically a windows issue, checking the windowing code I can't see any obvious cause for this, although some difference in GHOST could be the cause.

renderer:       'llvmpipe (LLVM 13.0.1, 256 bits)'
vendor:         'Mesa/X.org'
version:        '4.5 (Core Profile) Mesa 22.0.2'
That's odd, I cant redo the error with LLVMPipe on Linux, perhaps this is specifically a windows issue, checking the windowing code I can't see any obvious cause for this, although some difference in GHOST could be the cause. ``` renderer: 'llvmpipe (LLVM 13.0.1, 256 bits)' vendor: 'Mesa/X.org' version: '4.5 (Core Profile) Mesa 22.0.2' ```
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

In case this helps, I'm also on Windows with NVIDIA.

While dragging my mouse around that area I am seeing calls to gizmo_find_intersected_3d. Inside there the meat of it is the result of gizmo_find_intersected_3d_intern. That is always returning 0 as hit_count for me at those corners. It is being called with use_depth_test = false and has_3d_select_bias = false. If I make use_depth_test always true then it works perfectly. Changing only has_3d_select_bias makes no similar difference. Just setting use_depth_cache true does not change behavior.

In case this helps, I'm also on Windows with NVIDIA. While dragging my mouse around that area I am seeing calls to `gizmo_find_intersected_3d`. Inside there the meat of it is the result of `gizmo_find_intersected_3d_intern`. That is always returning 0 as hit_count for me at those corners. It is being called with use_depth_test = false and has_3d_select_bias = false. **If I make `use_depth_test` always true then it works perfectly**. Changing only has_3d_select_bias makes no similar difference. Just setting use_depth_cache true does not change behavior.

This issue was referenced by 9dadd8bdb1

This issue was referenced by 9dadd8bdb101fd5c06cd6ca7aa708a6ce6f13d47

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2022-04-29 05:14:38 +02:00

Thanks for testing without depth testing, committed this as a workaround.

Thanks for testing without depth testing, committed this as a workaround.

Removed subscriber: @LalaGhost

Removed subscriber: @LalaGhost

Size gizmo is fixed but now Look at manipulator doesn't work. 🤔 Should I create a new bug report? It seems like was broken by the fix that @ideasman42 committed.

Size gizmo is fixed but now Look at manipulator doesn't work. 🤔 Should I create a new bug report? It seems like was broken by the fix that @ideasman42 committed.

In #97124#1354050, @slowburn wrote:
Size gizmo is fixed but now Look at manipulator doesn't work. 🤔 Should I create a new bug report? It seems like was broken by the fix that @ideasman42 committed.

The same, I can`t grab it too
2022-05-09_00-00-45.mp4

> In #97124#1354050, @slowburn wrote: > Size gizmo is fixed but now Look at manipulator doesn't work. 🤔 Should I create a new bug report? It seems like was broken by the fix that @ideasman42 committed. The same, I can`t grab it too [2022-05-09_00-00-45.mp4](https://archive.blender.org/developer/F13059405/2022-05-09_00-00-45.mp4)

In #97124#1354050, @slowburn wrote:
manipulator doesn't work. 🤔 Should I create a new bug report?

@slowburn Looks like it's already reported... #97771 (Regression: light gizmos not working (Windows + NVidia))

> In #97124#1354050, @slowburn wrote: >manipulator doesn't work. 🤔 Should I create a new bug report? @slowburn Looks like it's already reported... #97771 (Regression: light gizmos not working (Windows + NVidia))
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
14 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97124
No description provided.