Fix T97124: Area light size gizmo unselectable

Workaround for MS-Windows NVidia/LLVMPipe combination failing to select
the gizmo unless depth-test was used.